--- a/partite/spot/style.css
+++ b/partite/spot/style.css
@@ -64,41 +64,41 @@ h1 {
   font-size: 0.95em;
 }
 
-/* 📱 Portrait */
+/* 📱 Solo homepage: Portrait */
 @media screen and (orientation: portrait) {
-  .griglia {
+  body#home .griglia {
     grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
   }
 
-  .canale img {
+  body#home .canale img {
     height: 100px;
   }
 
-  .canale p {
+  body#home .canale p {
     font-size: 0.9em;
   }
 
-  body {
+  body#home {
     padding-left: calc(env(safe-area-inset-left) + 15px);
     padding-right: calc(env(safe-area-inset-right) + 15px);
   }
 }
 
-/* 🖼️ Landscape */
+/* 🖼️ Solo homepage: Landscape */
 @media screen and (orientation: landscape) {
-  .griglia {
+  body#home .griglia {
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   }
 
-  .canale img {
+  body#home .canale img {
     height: 140px;
   }
 
-  .canale p {
+  body#home .canale p {
     font-size: 1em;
   }
 
-  body {
+  body#home {
     padding-left: calc(env(safe-area-inset-left) + 30px);
     padding-right: calc(env(safe-area-inset-right) + 30px);
   }
