Aggiornamento completo della repository

--- a/partite/spot/style.css
+++ b/partite/spot/style.css
@@ -49,6 +49,13 @@ h1 {
   font-weight: bold;
 }
 
+.tile:focus,
+.canale:focus {
+  outline: 2px solid #fff;
+  box-shadow: 0 0 10px rgba(255,255,255,0.5);
+}
+
+
 .canale img {
   width: 100%;
   height: 110px;
