--- a/partite/primo/style.css
+++ b/partite/primo/style.css
@@ -154,3 +154,15 @@ h1::before {
   50% { background-position: 100% 50%; }
   100% { background-position: 0% 50%; }
 }
+/* Immagine di sfondo trasparente che segue lo scroll */
+#background-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.2; /* Trasparenza desiderata */
+  pointer-events: none; /* Per non interferire con altri elementi */
+  z-index: -1; /* Dietro tutto */
+}
